# waypoint_test

./: README.md  dependencies.rosinstall
friends_msgs/: CMakeLists.txt  package.xml
friends_msgs/include/friends_msgs/: common.h  friends_msgs.h
geodetic_utils/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
geodetic_utils/include/geodetic_utils/: geodetic_conv.hpp
geodetic_utils/launch/: set_gps_reference.launch
geodetic_utils/src/: set_gps_reference_node_telem.cpp
waypoint_navigator/: CMakeLists.txt  README.md  package.xml
waypoint_navigator/include/waypoint_navigator/: waypoint_navigator_node.h
waypoint_navigator/launch/: friends_sitl.launch  waypoint_navigator.launch
waypoint_navigator/paths/: trajectory_simple_enu.yaml  trajectory_simple_gps.yaml
waypoint_navigator/src/: waypoint_navigator_node.cpp
