<?xml version="1.0"?>
<package format="2">
  <name>waypoint_navigator</name>
  <version>2.0.0</version>
  <description>Mission navigator for ENU/GPS Trajectories</description>

  <maintainer email="pedro.pereira97@hotmail.com">Pedro Pereira</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>friends_msgs</build_depend>
  <build_depend>geodetic_utils</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>friends_msgs</exec_depend>
  <exec_depend>geodetic_utils</exec_depend>
  <exec_depend>glog_catkin</exec_depend>


</package>
